[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.22"
dav-server = "0.5.8"
hyper = { version = "0.14.27", features = [ "http1", "http2", "server", "stream", "runtime" ] }
tokio = { version = "1.35.1", features = ["full"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[profile.release]
strip = true  # 自动从二进制文件去除符号信息.
opt-level = "z"  #  二进制文件大小优化
lto = true
codegen-units = 1
panic = "abort"